# x402server

./: PERMIT_README.md  README.md  TRANSFER_README.md  __init__.py  app.py  cdp_transfer_handler.py  check_transaction.py  check_usdc_domain.py  debug_permit_error.py  pyproject.toml  test_api.py  test_ethereum_sepolia.py  test_network_fix.py  test_networks.py  test_permit.py  test_permit_debug.py  test_permit_fix.py  test_permit_request.py  test_real_permit.py  test_transfer.py  transfer_handler.py  verify_permit_signature.py  verify_sepolia_usdc.py  x402_proxy.py
